2010-01-28  Alan McGovern  <amcgovern@novell.com>

	* ItemContainerGenerator.cs: Add a comment to explain why we
	  need the call to MoveExistingItems

2010-01-28  Alan McGovern  <amcgovern@novell.com>

	* ItemContainerGenerator.cs: When we replace a realized item
	  we need to remove the old realized item and then create a
	  container for the new item. The 'remove' call shuffles all
	  the elements in the ICG down by 1 so that there isn't a hole
	  at the removed index, so we have to shuffle everything back
	  up before attempting to create the new container.

	* ItemsControl.cs: If you replace a realized item in the Items
	  list, ICG automatically generates a container for the new
	  item. We have to pass 'true' here otherwise we won't be able
	  to retrieve that new container.

2010-01-27  Jeffrey Stedfast  <fejj@novell.com>

	* VirtualizingStackPanel.cs (OnItemsChanged): Implemented the Add
	and Reset cases.

	* VirtualizingPanel.cs (OnItemsChanged): If the action is Reset,
	call OnChildrenClear().

2010-01-27  Jeffrey Stedfast  <fejj@novell.com>

	* VirtualizingStackPanel.cs (MeasureOverride): Return the Size we
	actually measured rather than availableSize.

	* VirtualizingPanel.cs (BringIndexIntoView): THis method appears
	to be a no-op from my experimenting.

2010-01-27  Alan McGovern  <amcgovern@novell.com>

	* VirtualizingPanel.cs: Revert r150235 as it caused a few
	  regressions in moon-unit.

2010-01-26  Jeffrey Stedfast  <fejj@novell.com>

	* VirtualizingPanel.cs: Connect to the owner's Items
	CollectionChanged event to properly hook up OnClearChildren().

	* VirtualizingStackPanel.cs (OnItemsChanged): Adjust our current
	Vertical/HorizontalOffset values when items are removed from
	various points in the list relative to our current view.

2010-01-26  Jeffrey Stedfast  <fejj@novell.com>

	* VirtualizingStackPanel.cs (OnItemsChanged): We need to
	invalidate our Measure and ScrollInfo here as there is a good
	chance they have changed.